Do not apply ink-skipping to line-through text decoration

Discussion resolved in WG issue tracker:
https://github.com/w3c/csswg-drafts/issues/711

BUG=670599
R=kojii
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2600453003
Cr-Commit-Position: refs/heads/master@{#444343}

Former-commit-id: 9a91abd16665860a7ab53a307b8e87c5783fbc6c